--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.0.16",
-        "@inertiajs/vue3": "^1.0.2"
+        "@inertiajs/vue3": "^1.0.2",
+        "@tinymce/tinymce-vue": "^5.0.1",
+        "tinymce": "^6.4.1"
     }
 }
