--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3'
 services:
     laravel.test:
+        container_name: conference-app
         build:
-            context: ./vendor/laravel/sail/runtimes/8.2
+            context: ./docker
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        image: sail-8.2/app
+        image: 'joowdx/sail:8.2'
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
@@ -15,17 +16,18 @@ services:
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
-            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
-            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
             IGNITION_LOCAL_SITES_PATH: '${PWD}'
         volumes:
             - '.:/var/www/html'
         networks:
-            - sail
+            - conference
         depends_on:
             - mysql
+            - meilisearch
+            - redis
     mysql:
-        image: 'mysql/mysql-server:8.0'
+        container_name: conference-mysql
+        image: 'mysql:8-debian'
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
@@ -36,10 +38,10 @@ services:
             MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
+            - 'mysql:/var/lib/mysql'
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
-            - sail
+            - conference
         healthcheck:
             test:
                 - CMD
@@ -48,9 +50,51 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    meilisearch:
+        container_name: conference-meilisearch
+        image: 'getmeili/meilisearch:latest'
+        ports:
+            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
+        volumes:
+            - 'meilisearch:/meili_data'
+        networks:
+            - conference
+        healthcheck:
+            test:
+                - CMD
+                - wget
+                - '--no-verbose'
+                - '--spider'
+                - 'http://localhost:7700/health'
+            retries: 3
+            timeout: 5s
+    redis:
+        container_name: conference-redis
+        image: 'redis:alpine'
+        ports:
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'redis:/data'
+        networks:
+            - conference
+        healthcheck:
+            test:
+                - CMD
+                - redis-cli
+                - ping
+            retries: 3
+            timeout: 5s
 networks:
-    sail:
+    conference:
+        name: conference
         driver: bridge
 volumes:
-    sail-mysql:
+    mysql:
+        name: conference-mysql
+        driver: local
+    meilisearch:
+        name: conference-meilisearch
+        driver: local
+    redis:
+        name: conference-redis
         driver: local
