--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 REDIS_HOST=redis
