--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/telescope": "^4.15",
         "laravel/tinker": "^2.8",
         "meilisearch/meilisearch-php": "^1.2",
+        "symfony/process": "^6.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
