--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
         "meilisearch/meilisearch-php": "^1.2",
+        "pusher/pusher-php-server": "^7.2",
         "symfony/process": "^6.3",
         "tightenco/ziggy": "^1.0"
     },
