--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "@heroicons/vue": "^2.0.16",
         "@inertiajs/vue3": "^1.0.2",
         "@vueup/vue-quill": "^1.1.1",
+        "laravel-echo": "^1.15.3",
         "moment": "^2.29.4",
+        "pusher-js": "^8.4.0-rc2",
         "vuedraggable": "^4.1.0"
     }
 }
