--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "chokidar": "^3.5.3",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
@@ -18,10 +19,12 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.18",
         "@heroicons/vue": "^2.0.16",
         "@inertiajs/vue3": "^1.0.2",
         "@vueup/vue-quill": "^1.1.1",
         "laravel-echo": "^1.15.3",
+        "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "pusher-js": "^8.4.0-rc2",
         "vuedraggable": "^4.1.0"
