--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "laravel/tinker": "^2.8",
         "meilisearch/meilisearch-php": "^1.2",
         "pusher/pusher-php-server": "^7.2",
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0",
         "symfony/process": "^6.3",
         "tightenco/ziggy": "^1.0"
     },
@@ -25,7 +27,7 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.20",
         "laravel/pint": "^1.0",
-        "laravel/sail": "^1.23",
+        "laravel/sail": "^1.27",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
