--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -45,6 +45,7 @@ RUN apt-get update \
 
 COPY requirements.txt .
 RUN python3 -m pip install -r requirements.txt
+RUN python3 -m spacy download en_core_web_sm
 
 RUN setcap "cap_net_bind_service=+ep" /usr/bin/php8.2
 
