--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Conference
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:bZ/VcE/ZfmeJNjPOmeRRmtFyO+pHk7HMFRpuxDmhYGI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,12 +13,12 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=conference
 DB_USERNAME=user
-DB_PASSWORD=pass
+DB_PASSWORD=password
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=reverb
 CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
@@ -26,16 +26,33 @@ REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID='1753531'
+PUSHER_APP_KEY='a12672075455a7a4834c'
+PUSHER_APP_SECRET='32bd303337526041e201'
 PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+PUSHER_PORT='443'
+PUSHER_SCHEME='https'
+PUSHER_APP_CLUSTER='ap1'
 
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_PUSHER_APP_KEY='a12672075455a7a4834c'
+VITE_PUSHER_HOST=
+VITE_PUSHER_PORT='443'
+VITE_PUSHER_SCHEME='https'
+VITE_PUSHER_APP_CLUSTER='ap1'
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
+
+MEILISEARCH_NO_ANALYTICS=false
+
+REVERB_APP_ID=209332
+REVERB_APP_KEY=rxsinhql2h7wlgw4armj
+REVERB_APP_SECRET=fhmdjvbwtltoxywmwbwa
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
