--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^11.0.6",
         "laravel/horizon": "^5.19",
         "laravel/octane": "^2.3",
+        "laravel/reverb": "@beta",
         "laravel/sanctum": "^4",
         "laravel/scout": "^10.2",
         "laravel/telescope": "^5",
