--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -104,7 +104,7 @@ http {
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        Upgrade $http_upgrade;
       proxy_set_header        Connection $connection_upgrade;
-      proxy_pass              http://zeroth:8000;
+      proxy_pass              http://0.0.0.0:8000;
     }
   }
 
