--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=conference-mysql
 DB_PORT=3306
 DB_DATABASE=conference
 DB_USERNAME=user
@@ -48,7 +48,7 @@ MEILISEARCH_NO_ANALYTICS=false
 REVERB_APP_ID=209332
 REVERB_APP_KEY=rxsinhql2h7wlgw4armj
 REVERB_APP_SECRET=fhmdjvbwtltoxywmwbwa
-REVERB_HOST="localhost"
+REVERB_HOST="62.72.12.234"
 REVERB_PORT=8080
 REVERB_SCHEME=http
 
@@ -56,3 +56,6 @@ VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 VITE_REVERB_HOST="${REVERB_HOST}"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
+WWWGROUP=1000
+WWWUSER=1000
