--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/telescope": "^5",
         "laravel/tinker": "^2.8",
         "meilisearch/meilisearch-php": "^1.2",
+        "predis/predis": "^2.2",
         "pusher/pusher-php-server": "^7.2",
         "spiral/roadrunner-cli": "^2.6",
         "spiral/roadrunner-http": "^3.4",
