--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,34 +24,34 @@ services:
         networks:
             - conference
         depends_on:
-            - mysql
+            # - mysql
             - meilisearch
             - redis
-    mysql:
-        container_name: conference-mysql
-        image: 'mysql:8-debian'
-        ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
-        environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ROOT_HOST: '%'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
-        volumes:
-            - 'mysql:/var/lib/mysql'
-            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
-        networks:
-            - conference
-        healthcheck:
-            test:
-                - CMD
-                - mysqladmin
-                - ping
-                - '-p${DB_PASSWORD}'
-            retries: 3
-            timeout: 5s
+    # mysql:
+    #     container_name: conference-mysql
+    #     image: 'mysql:8-debian'
+    #     ports:
+    #         - '${FORWARD_DB_PORT:-3306}:3306'
+    #     environment:
+    #         MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+    #         MYSQL_ROOT_HOST: '%'
+    #         MYSQL_DATABASE: '${DB_DATABASE}'
+    #         MYSQL_USER: '${DB_USERNAME}'
+    #         MYSQL_PASSWORD: '${DB_PASSWORD}'
+    #         MYSQL_ALLOW_EMPTY_PASSWORD: 1
+    #     volumes:
+    #         - 'mysql:/var/lib/mysql'
+    #         - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+    #     networks:
+    #         - conference
+    #     healthcheck:
+    #         test:
+    #             - CMD
+    #             - mysqladmin
+    #             - ping
+    #             - '-p${DB_PASSWORD}'
+    #         retries: 3
+    #         timeout: 5s
     meilisearch:
         container_name: conference-meilisearch
         image: 'getmeili/meilisearch:latest'
