--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -22,8 +22,8 @@ http {
 
   charset                     utf-8;
 
-  ssl_certificate             /etc/ssl/private/localhost.crt;
-  ssl_certificate_key         /etc/ssl/private/localhost.key;
+  ssl_certificate             /etc/ssl/private/fullchain.pem;
+  ssl_certificate_key         /etc/ssl/private/privkey.pem;
 
   ssl_session_cache           shared:SSL:10m;
   ssl_session_tickets         off;
