--- a/docker/laravel.test.conf
+++ b/docker/laravel.test.conf
@@ -1,7 +1,7 @@
 
 server {
     listen 443 ssl;
-    server_name laravel.test;
+    server_name legistechsolutions.com;
 
     ssl_certificate /etc/ssl/private/fullchain.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
