--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,26 +1,190 @@
+user                          nginx;
+worker_processes              auto;
 
-server {
-    listen 443 ssl;
+error_log                     /var/log/nginx/error.log notice;
+pid                           /var/run/nginx.pid;
+
+events {
+    worker_connections        1024;
+}
+
+http {
+  include                     /etc/nginx/mime.types;
+  default_type                application/octet-stream;
+
+  http2                       on;
+  root                        /var/www/html/public;
+  index                       index.html index.php;
+
+  server_tokens               off;
+
+  client_max_body_size        4M;
+
+  charset                     utf-8;
+
+  ssl_certificate             /etc/ssl/private/fullchain.pem;
+  ssl_certificate_key         /etc/ssl/private/privkey.pem;
+
+  ssl_session_cache           shared:SSL:10m;
+  ssl_session_tickets         off;
+  ssl_session_timeout         10m;
+
+  ssl_protocols               TLSv1.3;
+  ssl_prefer_server_ciphers   on;
+  ssl_dhparam                 /etc/ssl/private/dhparam.pem;
+
+  ssl_ciphers                 EECDH+AESGCM:EDH+AESGCM;
+  ssl_ecdh_curve              secp384r1;
+
+  # ssl_stapling                on;
+  # ssl_stapling_verify         on;
+
+  add_header                  X-Frame-Options "SAMEORIGIN";
+  add_header                  X-Content-Type-Options "nosniff";
+  add_header                  X-XSS-Protection "1; mode=block";
+
+  access_log                  off;
+  error_log                   /var/log/nginx/socket.example.com.log error;
+
+  proxy_busy_buffers_size     512k;
+  proxy_buffers               4 512k;
+  proxy_buffer_size           256k;
+
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+  }
+
+  server {
+    listen 80;
+    listen [::]:80;
+
     server_name legistechsolutions.com;
 
-    ssl_certificate /etc/ssl/private/fullchain.pem;
-    ssl_certificate_key /etc/ssl/private/privkey.pem;
+    return 301 https://$host$request_uri;
+  }
 
-    root /var/www/html/public;
-    index index.php index.html index.htm;
+  server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    server_name legistechsolutions.com;
+
+    location /index.php {
+      try_files 404 @octane;
+    }
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+      try_files $uri $uri/ @octane;
     }
 
-    location ~ \.php$ {
-        fastcgi_pass laravel.test:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+    location = /robots.txt  {
+      access_log off;
+      log_not_found off;
     }
 
-    location ~ /\.ht {
-        deny all;
+    location ~ /\.(?!well-known).* {
+      deny all;
+      access_log off;
+      log_not_found off;
     }
+
+    access_log off;
+
+    error_log  /var/log/nginx/domain.com-error.log error;
+
+    error_page 404 /index.php;
+
+    location @octane {
+      proxy_http_version      1.1;
+      proxy_set_header        Host $http_host;
+      proxy_set_header        Scheme $scheme;
+      proxy_set_header        SERVER_PORT $server_port;
+      proxy_set_header        REMOTE_ADDR $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        Upgrade $http_upgrade;
+      proxy_set_header        Connection $connection_upgrade;
+      proxy_pass              http://0.0.0.0:8000;
+    }
+  }
+
+  server {
+    listen 6001 ssl;
+    listen [::]:6001 ssl;
+
+    server_name legistechsolutions.com;
+
+    location / {
+      proxy_pass              http://soketi:6001;
+      proxy_read_timeout      60;
+      proxy_connect_timeout   60;
+      proxy_redirect          off;
+
+      proxy_http_version      1.1;
+      proxy_set_header        Upgrade $http_upgrade;
+      proxy_set_header        Connection 'upgrade';
+      proxy_set_header        Host $host;
+      proxy_cache_bypass      $http_upgrade;
+    }
+  }
+
+  server {
+    listen 7700 ssl;
+    listen [::]:7700 ssl;
+
+    server_name legistechsolutions.com;
+
+    location / {
+      proxy_pass              http://meilisearch:7700;
+      proxy_read_timeout      60;
+      proxy_connect_timeout   60;
+      proxy_redirect          off;
+
+      proxy_http_version      1.1;
+      proxy_set_header        Upgrade $http_upgrade;
+      proxy_set_header        Connection 'upgrade';
+      proxy_set_header        Host $host;
+      proxy_cache_bypass      $http_upgrade;
+    }
+  }
+
+  server {
+    listen 8025 ssl;
+    listen [::]:8025 ssl;
+
+    server_name legistechsolutions.com;
+
+    location / {
+      proxy_pass              http://mailpit:8025;
+      proxy_read_timeout      60;
+      proxy_connect_timeout   60;
+      proxy_redirect          off;
+
+      proxy_http_version      1.1;
+      proxy_set_header        Upgrade $http_upgrade;
+      proxy_set_header        Connection 'upgrade';
+      proxy_set_header        Host $host;
+      proxy_cache_bypass      $http_upgrade;
+    }
+  }
+}
+
+stream {
+  server {
+    listen 5432;
+    listen [::]:5432;
+    proxy_pass pgsql:5432;
+  }
+
+  server {
+    listen 6379;
+    listen [::]:6379;
+    proxy_pass redis:6379;
+  }
+
+  server {
+    listen 1012;
+    listen [::]:1012;
+    proxy_pass mailpit:1012;
+  }
 }
